--- a/client/style.css
+++ b/client/style.css
@@ -3,5 +3,15 @@ html, body {
     width: 100%;
     margin: 0;
     padding: 0;
+    background-color:#735290;
   }
-  
+h1{
+  color: #76E7CD;
+  font-size: 48px;
+}
+h3{
+  font-size: 36px;
+}
+#playDiv, #addQuestionsDiv{
+  display: none;
+}
